--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,3 +26,5 @@ en:
   shortcuts_help_search: Search
   shortcuts_inline_code: Inline code
   shortcuts_preformatted_text: Preformatted text
+  shortcuts_help_projects: Navigate to Projects
+  shortcuts_help_mypage: Navigate to My page
